// Copyright 2020 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package org.chromium.chrome.browser.tab.proto;

option java_package = "org.chromium.chrome.browser.tab.proto";

message ShoppingPersistedTabDataProto {
  // String representing the price of the offer.
  optional int64 price_micros = 1;

  // String representing previous price of the offer.
  optional int64 previous_price_micros = 2;

  // Currency code of the price.
  optional string price_currency_code = 3;

  // Time the ShoppingPersistedTabData was fetched
  // measured in the number of seconds since the epoch.
  optional int64 last_updated_ms = 4;

  // Time the price changed measured in the number of
  // seconds since the epoch.
  optional int64 last_price_change_time_ms = 5;

  // The id of the main offer on the page.
  optional string main_offer_id = 6;

  // The gurl associated with the price drop.
  optional string serialized_gurl = 7;

  // Whether the user has seen the current price drop in the tab switcher grid.
  optional bool is_current_price_drop_seen = 8;
}
